# chennai

./: .dockerignore  .gitignore  README.md
.github/workflows/: release.yml
Formula/: chennai.rb
ci/: Dockerfile  build.sh  native-image-musl.sh  native-image.sh  trace-native-image.sh
engine/: build.sbt
engine/project/: plugins.sbt
engine/src/main/scala/io/appthreat/chennai/engine/: AtomSession.scala  Main.scala  Protocol.scala  ReplBridge.scala  Server.scala
engine/src/main/scala/io/appthreat/chennai/engine/handlers/: AlgoHandler.scala  DetailHandler.scala  (+5 more)
engine/src/test/scala/io/appthreat/chennai/engine/: FlowHandlerTests.scala  ProtocolTests.scala  QueryHandlerTests.scala
scripts/: build.sh  setup.sh
tui/: Cargo.toml
tui/agents/: code-review.md  explain.md  security-review.md  trace.md
tui/docs/: TRAVERSAL.md
tui/src/: app.rs  commands.rs  config.rs  engine.rs  main.rs  model.rs  repl.rs
tui/src/agent/: anthropic.rs  debug_log.rs  memory.rs  mod.rs  openai.rs  provider.rs  render.rs  shell.rs  tools.rs  transcript.rs
tui/src/blint/: loader.rs  mod.rs  query.rs  runner.rs
tui/src/bom/: atom_gen.rs  generator.rs  mod.rs  schema.rs  store.rs
tui/src/dosai/: loader.rs  mod.rs  query.rs  runner.rs
tui/src/golem/: loader.rs  mod.rs  query.rs  runner.rs
tui/src/rusi/: loader.rs  mod.rs  query.rs  runner.rs
tui/src/shared/: backend.rs  mod.rs  slice_fmt.rs
tui/src/ui/: mod.rs  theme.rs
wrapper/nodejs/: package-lock.json  package.json
wrapper/nodejs/scripts/: assemble.mjs  build-local.sh
wrapper/nodejs/test/: resolve.test.js
