[package]
name = "chennai"
version = "0.5.0"
edition = "2024"
description = "Interactive terminal UI for exploring AppThreat atom files"
license = "MIT"

[[bin]]
name = "chennai"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ureq = "3"
toml = "0.8"
serde_yaml = "0.9"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
